# Perspicacite-AI

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  INSTALL_AGENT.md  MANUAL_QA.md  Makefile  README.md  bug_from_mimosa_side.txt  config.claude_code.example.yml  config.codex.example.yml  config.example.openrouter-free.yml  config.example.yml  config.hermes.example.yml  config.ollama.example.yml  config.openclaw.example.yml  config_bge_en_icl.yml  config_bge_m3.yml  config_biomedbert.yml  config_code_kb.yml  config_gte_qwen2_7b.yml  config_neuml_pubmedbert.yml  config_openai_large.yml  config_pubmedbert.yml  config_qwen3_14b.yml  config_specter2.yml  config_stella_1_5b.yml  dev.sh  perspicacite_design_1.jsx  pyproject.toml  web_app_full.py
.claude/commands/: setup.md
.claude/skills/perspicacite-mcp/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
audit_2026-05-17/: round3_followups.json  round3_followups.py
audit_2026-05-24/: audit_log.md  audit_round3.py
configs/: README.md
configs/embedders/: bge_en_icl.yml  bge_m3.yml  biomedbert.yml  code_kb.yml  gte_qwen2_7b.yml  neuml_pubmedbert.yml  openai_large.yml  pubmedbert.yml  qwen3_14b.yml  specter2.yml  stella_1_5b.yml
configs/llm/: claude_code.yml  codex.yml  hermes.yml  ollama.yml  openclaw.yml  openrouter-free.yml
docs/: MCP.md  VISION.md  agent-cli-caveats.md  architecture-2026-05-15.md  budget-caps-2026-05-14.md  checkpoint-resume-2026-05-14.md  ci-setup-2026-05-14.md  config-audit-status-2026-05-14.md  e2e-validation-2026-05-15.md  embedding-cache-2026-05-14.md  embedding-models.md  embedding_reranker_policy.md  error-modes-2026-05-14.md  export-formats-2026-05-14.md  fallback-chain-2026-05-14.md  getting-started.md  github-skill-bundle-ingest-2026-05-15.md  google-scholar-abstract-only-2026-05-17.md  grant-proposal-workflow.md  handoff-2026-05-17.md  index.md  kb-grounding-loop.md  llm-cache-2026-05-14.md  mcp-resources-prompts-2026-05-14.md  mcp-smoke-status-2026-05-14.md  multimodal-extraction-2026-05-14.md  orcid-disambiguation-2026-05-14.md  pdf-extraction-docling.md  perspicacite_skills.md  provider-matrix-status-2026-05-14.md  rate-limit-handling-2026-05-14.md  recipe-book-2026-05-15.md  roadmap-2026-05-followups.md  test-status-2026-05-14.md  time-bounded-queries-2026-05-14.md  versioned-kbs-2026-05-14.md
docs/concepts/: capsules.md  citation-graph.md  knowledge-bases.md  provenance.md  rag-modes.md
docs/development/: architecture.md  contributing.md  superpowers-workflow.md  testing.md
docs/guides/: embedding-and-rag-configuration.md  expand-via-citations.md  ingest-bibtex.md  institutional-pdf-access.md  obsidian-export.md  search-to-kb.md  zotero-integration.md
docs/handoffs/: 2026-05-16-perspicacite-zotero-mcp-tools.md
docs/reference/: cli.md  config.md  mcp-tools.md  paper-source-enum.md  rest-api.md
docs/superpowers/: audit-2026-05-14.md  capsule_schema.md  external_resources.md
docs/superpowers/handoffs/: 2026-05-15-master-execution-handoff.md  2026-05-15-session-end.md  2026-05-16-backlog-session-handoff.md
docs/upstream-prompts/: 2026-05-15-asb-library-repo-discovery.md
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
frontend/.claude/: launch.json
frontend/src/app/: globals.css  (+2 more)
old_tools/library_expansion_with_abstract/: README.md  build_libraries_from_dois.py  pubmed_explorer.py  requirements.txt  screen_papers.py
scripts/: agentic_query_complexity_eval.py  check_install.py  create_specter2_kb.sh  migrate_to_paper_only_kb.py
src/perspicacite/: cli.py  cli_helpers.py  logging.py
static/css/: base.css  chat.css  kb.css  layout.css  survey.css  theme.css
static/js/: chat.js  conversations.js  databases.js  kb.js  kb_stats.js  main.js  mode.js  paper_detail.js  provenance.js  survey.js  utils.js
templates/: index.html
tests/: conftest.py  test_anthropic_api.py  test_chunking.py  test_download_real.py  test_download_with_bibtex.py  test_hybrid_module.py  test_hybrid_retrieval.py  test_mcp_live.py  test_mcp_server.py  test_rag_modes.py  test_rag_modes_pytest.py
tests/audit/: run_2026_05_15_audit.py  run_2026_05_17_audit.py  run_e2e_audit.py  run_full_pipeline_audit.py  run_second_round_audit.py
tests/data/: perf_baseline.json  perf_baseline_llm.json
tests/e2e/: conftest.py  test_cross_kb_routing.py  test_multi_paper_citations.py  test_single_paper.py
tests/integration/: test_asb_run_ingest_end_to_end.py  test_chunking_code_e2e.py  test_codestral_embed_live.py  test_config_audit.py  test_github_kb_e2e.py  test_mcp_smoke.py  test_perf_baseline.py  test_perf_baseline_llm.py  test_persistence_integrity.py  test_provider_matrix.py  test_search_optimization_e2e.py  test_snowball_ss_fallback_live.py
tests/unit/: conftest.py  test_abstract_only_kb.py  test_abstract_prose_chunk.py  test_accessions.py  test_add_dois_warnings.py  test_ads_search.py  test_advanced_mode_multimodal_hook.py  test_advanced_recency_provenance.py  test_agent_cli_client_construction.py  test_agent_cli_rate_limit.py  test_agent_cli_rich_fields.py  test_agent_cli_usage_config_fields.py  test_agent_cli_usage_parsing.py  test_agentic_chat_provenance.py  test_agentic_concurrency.py  test_agentic_mode_multimodal_hook.py  test_agentic_orchestrator_provenance.py  test_agentic_phase1.py  test_agentic_phase2.py  test_agentic_phase3.py  test_agentic_phase4.py  test_agentic_query_optimization.py  test_agentic_rerank.py  test_agentic_source_events.py  test_anchor.py  test_anchor_builder.py  test_annotate_figure_ids_for_ui.py  test_arxiv_id_fallback.py  test_asb_card_parser.py  test_asb_chunk_producer.py  test_asb_dag.py  test_asb_fixtures_present.py  test_asb_response_metadata.py  test_asb_skill_kb_writer.py  test_asb_skill_parser.py  test_audit_hardening.py  test_auth_error_detection.py  test_basic_mode_multimodal_hook.py  test_basic_mode_phase_emission.py  test_basic_mode_query_optimization.py  (+353 more)
tests/web/: test_index_renders_attachments.py
(+462 files in other folders)
