[project]
name = "perspicacite"
version = "2.0.0"
description = "AI-powered scientific literature research assistant"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "litellm==1.82.3",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "bibtexparser>=1.4.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "click>=8.1.0",
    "fastmcp>=3.0.0",   # 3.x: @mcp.tool() with parens + http_app() ASGI mount
    "biopython>=1.80",
    "nltk>=3.8",
    "langchain-text-splitters>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=3.8.0",
]
# SciLEx (Science Literature Exploration) — multi-database systematic-
# review toolkit from the Wimmics group at Inria. Crawlers + aggregators
# for Semantic Scholar / OpenAlex / PubMed / arXiv / HAL / DBLP / IEEE /
# Springer. MIT-licensed, currently github-only (no PyPI release).
# Without this extra, the `search_literature` MCP tool returns an
# explicit error pointing the user here.
#
# Install with:
#   uv pip install -e ".[scilex]"
#
# The Wimmics package has ~19 minimum deps and supports Python 3.10+,
# so installation is much lighter than the older datalogism/SciLEx
# fork (73 deps, Python 3.13+).
scilex = [
    "scilex @ git+https://github.com/Wimmics/SciLEx.git",
]

[project.scripts]
perspicacite = "perspicacite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required so the [scilex] extras-group can pull from a git+ URL.
# Hatch refuses direct references by default to keep PyPI uploads
# reproducible; we never publish Perspicacité as a wheel today so
# the protection isn't needed.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/perspicacite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (may need services)",
    "live: Tests requiring API keys (deselect with -m 'not live')",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/perspicacite"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70
