[project]
name = "perspicacite"
version = "2.0.0"
description = "AI-powered scientific literature research assistant"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0",
    "litellm==1.82.3",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "bm25s>=0.2.0",
    "sentence-transformers>=3.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "bibtexparser>=1.4.0",
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "click>=8.1.0",
    "fastmcp>=3.0.0",   # 3.x: @mcp.tool() with parens + http_app() ASGI mount
    "biopython>=1.80",
    "nltk>=3.8",
    "langchain-text-splitters>=0.3.0",
    "pathspec>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=3.8.0",
]
# SciLEx (Science Literature Exploration) — multi-database systematic-
# review toolkit from the Wimmics group at Inria. Crawlers + aggregators
# for Semantic Scholar / OpenAlex / PubMed / arXiv / HAL / DBLP / IEEE /
# Springer. MIT-licensed, currently github-only (no PyPI release).
# Without this extra, the `search_literature` MCP tool returns an
# explicit error pointing the user here.
#
# Install with:
#   uv pip install -e ".[scilex]"
#
# The Wimmics package has ~19 minimum deps and supports Python 3.10+,
# so installation is much lighter than the older datalogism/SciLEx
# fork (73 deps, Python 3.13+).
scilex = [
    "scilex @ git+https://github.com/Wimmics/SciLEx.git",
]

# Browser cookie import (perspicacite import-browser-cookies CLI).
# Reads + decrypts cookies from Chrome/Brave/Firefox/Edge/Safari for
# institutional-access PDF downloads. On macOS the OS may prompt for
# keychain access once when first reading Chromium-family cookies.
cookies = [
    "browser-cookie3>=0.20.0",
]

# Optional Tree-sitter-backed chunker for non-Python code (Go, Rust,
# Java, JS/TS, etc.). When installed, `_chunk_treesitter` uses a
# real parse tree instead of the LangChain splitter fallback.
#
# Install with:
#   uv pip install -e ".[code-parsing]"
code-parsing = [
  "tree-sitter>=0.21",
  "tree-sitter-languages>=1.10",
]

# Optional HTML -> Markdown conversion for URL-to-KB ingest. Without
# this extra the ``ingest_urls_to_kb`` tool falls back to a basic
# BeautifulSoup text extraction (lower quality — boilerplate not
# stripped, no structural awareness).
#
# Install with:
#   uv pip install -e ".[html-ingest]"
html-ingest = [
  "trafilatura>=1.6",
]

# Optional YouTube transcript ingest. Pulls public captions (manual or
# auto-generated) via youtube-transcript-api. No API key required.
# When this extra is installed, ``push_to_zotero`` and
# ``ingest_urls_to_kb`` recognize YouTube URLs and fetch + LLM-correct
# their transcripts for ingest.
#
# Install with:
#   uv pip install -e ".[youtube-ingest]"
youtube-ingest = [
  "youtube-transcript-api>=0.6",
]

# Optional headless Chromium for last-resort title->DOI discovery and
# bot-walled HTML capture. Enabled with `pdf_download.headless_browser:
# true` in config.yml. When absent, the title_resolver and html_capture
# modules silently skip the Chromium tier and use only HTTP-based
# fallbacks.
#
# After installing the extra, also run `playwright install chromium`
# to download the browser binary (~150MB):
#   uv pip install -e ".[browser]"
#   playwright install chromium
browser = [
  "playwright>=1.40",
]

# indicium — Knowledge Graph / SHACL validation layer for structured claim
# representation. Local sibling package (not yet on PyPI). Pulls in linkml,
# pyshacl, and rdflib. Install only when KG-backed workflows are needed.
#
# Local packages are available at ../indicium, ../indicium-adapters, and
# ../indicium-adapters-metabolomics. The `extract_claims_from_passages`
# and `export_astra` MCP tools degrade gracefully without these extras.
#
# Install with:
#   uv sync --extra indicia --extra adapters
indicia = [
  # Floor: 1.8.0 is the first release that ships the verify_quote kernel that
  # the R3 anchor path (anchor_claims / annotate_anchor_status) imports. An
  # older indicium would make anchoring fail-soft to "unchecked" silently.
  "indicium>=1.8.0",
  "pyoxigraph>=0.4",
]

# indicium-adapters — optional domain adapter protocol. Core package (>=0.4.0)
# no longer ships the metabolomics adapters; those live in the sibling package
# indicium-adapters-metabolomics (MetabolomicsAdapter, MetaboKGAdapter,
# EMIAdapter). Both are needed so discover_adapters() returns all three.
# Enables domain_adapter= kwarg in extract_claims().
adapters = [
    "indicium-adapters>=0.4.0",
    "indicium-adapters-metabolomics>=0.1.0",
]

[project.scripts]
perspicacite = "perspicacite.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required so the [scilex] extras-group can pull from a git+ URL.
# Hatch refuses direct references by default to keep PyPI uploads
# reproducible; we never publish Perspicacité as a wheel today so
# the protection isn't needed.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/perspicacite"]

[tool.uv]
# Override scilex's transitive httpx<0.28 pin so fastmcp 3.x can resolve.
# Safe while the [scilex] extra is unused by the core / KB / MCP paths.
override-dependencies = ["httpx>=0.28.1"]

[tool.uv.sources]
# Local-path sources for the indicium stack. All three sibling packages are
# available at the paths below (editable installs). Pair with the `indicia`
# and `adapters` extras above: uv sync --extra indicia --extra adapters
indicium = { path = "../indicium", editable = true }
indicium-adapters = { path = "../indicium-adapters", editable = true }
indicium-adapters-metabolomics = { path = "../indicium-adapters-metabolomics", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (may need services)",
    "live: Tests requiring API keys (deselect with -m 'not live')",
    "slow: Slow tests, opt-in or excluded in fast runs",
    "smoke: MCP tool inventory smoke tests (fast, no real I/O)",
    "config: Config loading audit tests (fast, no LLM calls, small YAML reads only)",
    "e2e: End-to-end pipeline tests (Wave 6.1, mocked LLM + embedder)",
    "perf: Performance regression tests (Wave 6.3, baseline comparison)",
]
filterwarnings = [
    # rdflib 7.x internally accesses deprecated Dataset.default_context
    # and Dataset.contexts — nothing we can fix upstream.
    "ignore::DeprecationWarning:rdflib.*",
    # indicium-adapters: claim_to_insight() in mcp/server.py calls the
    # old indicium.claim_to_insight shim (still functional, migration TBD).
    "ignore:indicium.adapters.astra.claim_to_insight.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/perspicacite"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 70

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.2",
    "pytest-timeout>=2.4.0",
    "respx>=0.23.1",
]
